@@ -83,7 +83,7 @@ class DummyPOP3Handler(asynchat.async_chat):
 
     def cmd_list(self, arg):
         if arg:
-            self.push('+OK %s %s' %(arg, arg))
+            self.push('+OK %s %s' % (arg, arg))
         else:
             self.push('+OK')
             asynchat.async_chat.push(self, LIST_RESP)
@@ -203,6 +203,10 @@ class TestPOP3Class(TestCase):
                     113)
         foo = self.client.retr('foo')
         self.assertEqual(foo, expected)
+
+    def test_too_long_lines(self):
+        self.assertRaises(poplib.error_proto, self.client._shortcmd,
+                          'echo +%s' % ((poplib._MAXLINE + 10) * 'a'))
 
     def test_dele(self):
         self.assertOK(self.client.dele('foo'))
